src/objects/ACCL__Data_Type_Option__c.object
<CustomObject>
    <description>Holds the item (picklist item) of a flexible data type.</description>
    <fields>
        <fullName>ACCL__Code_Uniqueness_Check__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used internal to ensure that one code (field) is unique within a data type record. The value would be set via workflow. It should not be shown to the user.</description>
        <label>Code</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Code__c</fullName>
        <label>Code</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Data_Type__c</fullName>
        <label>Data Type</label>
        <referenceTo>ACCL__Data_Type__c</referenceTo>
        <relationshipLabel>Data Type Options</relationshipLabel>
        <relationshipName>Data_Type_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Default_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only one default item is allowed per data type.</inlineHelpText>
        <label>Default Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_1__c</fullName>
        <label>Description Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_2__c</fullName>
        <label>Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_3__c</fullName>
        <label>Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description__c</fullName>
        <formula>CASE($User.ACCL__Language_Postfix__c,
&quot;Language1&quot;, ACCL__Description_Language_1__c,
&quot;Language2&quot;, BLANKVALUE(ACCL__Description_Language_2__c,ACCL__Description_Language_1__c),
&quot;Language3&quot;, BLANKVALUE(ACCL__Description_Language_3__c,ACCL__Description_Language_1__c),
&quot;Language4&quot;, BLANKVALUE(ACCL__Description_Language_4__c,ACCL__Description_Language_1__c),
ACCL__Description_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__ImageId__c</fullName>
        <description>Name of the picture on mobility device</description>
        <label>ImageId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.ACCL__record_link, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Short_Description_Language_1__c</fullName>
        <label>Short Description Language 1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Short_Description_Language_2__c</fullName>
        <label>Short Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Short_Description_Language_3__c</fullName>
        <label>Short Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Short_Description__c</fullName>
        <formula>CASE($User.ACCL__Language_Postfix__c, 
&quot;Language1&quot;, ACCL__Short_Description_Language_1__c, 
&quot;Language2&quot;, BLANKVALUE(ACCL__Short_Description_Language_2__c,ACCL__Short_Description_Language_1__c), 
&quot;Language3&quot;, BLANKVALUE(ACCL__Short_Description_Language_3__c,ACCL__Short_Description_Language_1__c), 
&quot;Language4&quot;, BLANKVALUE(ACCL__Short_Description_Language_4__c,ACCL__Short_Description_Language_1__c), 
ACCL__Short_Description_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Sort__c</fullName>
        <label>Sort</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Unique_Default_Option__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used internal to ensure that only one option can be set as default within a data type record. The value would be set via workflow. It should not be shown to the user.</description>
        <label>Default Item</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Validation_Code__c</fullName>
        <label>Validation Code</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_Activ__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Data Type Option</label>
    <nameField>
        <displayFormat>DTO-{0000}</displayFormat>
        <label>Data Type Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Type Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>